Add prepublish script

--- a/package.json
+++ b/package.json
@@ -60,7 +60,8 @@
     "build:all": "npm run build && npm run build:production",
     "build:production": "webpack -p --env.production",
     "copy-examples": "node utils/copy-examples",
-    "release:ci": "rm -rf dist && npm run build:all && $NPM_TOKEN=%env.NPM_TOKEN% npm publish",
+    "prepublishOnly": "rm -rf dist && npm run build:all",
+    "release:ci": "$NPM_TOKEN=%env.NPM_TOKEN% npm publish",
     "start": "webpack-dev-server --port 9001"
   }
 }
